--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
               android:layout_height="220dp"
               android:orientation="vertical">
 
@@ -21,5 +22,15 @@
             android:textSize="12sp"
             android:textStyle="bold"
             android:layout_gravity="bottom"/>
+
+        <ImageButton
+            android:id="@+id/nav_header_button"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/tab_book_24dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="52dip"
+
+            />
 
 </FrameLayout>
