--- a/app/src/main/res/layout/include_movie_title.xml
+++ b/app/src/main/res/layout/include_movie_title.xml
@@ -76,7 +76,7 @@
             android:layout_gravity="center"
             android:padding="8dp">
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/activity_md_ratingnumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -84,7 +84,7 @@
                 android:textColor="@color/movieTitleColor"
                 android:textSize="22sp"
                 android:text="@string/book_detail_borrow"
-                />
+                />-->
 
             <!--<TextView
                 android:id="@+id/activity_md_ratingnumber"
