--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,5 +35,5 @@
     <!--WebViewColor-->
 
     <!--borrow button color-->
-    <color name="color_borrow_btn">#e2a1bb</color>
+    <color name="color_borrow_btn">#96e3e3</color>
 </resources>
