--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -39,7 +39,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingBottom="5dp">
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_marginTop="5dp">
 
                 <View
                     android:layout_width="30dp"
@@ -73,9 +75,9 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
-                android:paddingBottom="5dp"
+                android:padding="5dp"
                 android:id="@+id/item_collection_ratll">
-                <RatingBar
+                <!--<RatingBar
                     android:id="@+id/item_collection_ratingbar"
                     android:isIndicator="true"
                     style="@style/MovieRatingBar"
@@ -87,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp"/>-->
             </LinearLayout>
            <TextView
                android:id="@+id/item_collection_tv1"
