--- a/app/src/main/res/layout/fragment_to_back.xml
+++ b/app/src/main/res/layout/fragment_to_back.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/bookBackScrollingContent"
-        android:fillViewport="true"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
-        <com.hust.bookflow.view.NoScrollViewPager
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/book_back_rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/bookBackcollection_vp"
+            android:layout_height="match_parent"/>
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/search_pb"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_horizontal|center_vertical"
             />
 
-    </android.support.v4.widget.NestedScrollView>
+    </android.support.design.widget.CoordinatorLayout>
 
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
