--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,4 +36,5 @@
 
     <!--borrow button color-->
     <color name="color_borrow_btn">#96e3e3</color>
+    <color name="color_back_btn">#8bd8b2</color>
 </resources>
