--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -8,5 +8,11 @@
         android:title="Search"
         app:showAsAction="always"
         />
+    <item
+        android:id="@+id/toolbar_menu_scan"
+        android:icon="@mipmap/scan"
+        android:title="Search"
+        app:showAsAction="always"
+        />
 
 </menu>
