--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -43,30 +43,30 @@
                     android:textStyle="bold"
                     />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    >
+                <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginTop="4dp"-->
+                    <!--android:gravity="center_vertical"-->
+                    <!--android:orientation="horizontal"-->
+                    <!--&gt;-->
 
-                    <RatingBar
-                        android:id="@+id/item_search_rating"
-                        style="@style/MovieRatingBar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:numStars="5"
-                        />
+                    <!--<RatingBar-->
+                        <!--android:id="@+id/item_search_rating"-->
+                        <!--style="@style/MovieRatingBar"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:numStars="5"-->
+                        <!--/>-->
 
-                    <TextView
-                        android:id="@+id/item_search_ratnum"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:textSize="12sp"
-                        />
-                </LinearLayout>
+                    <!--<TextView-->
+                        <!--android:id="@+id/item_search_ratnum"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginStart="4dp"-->
+                        <!--android:textSize="12sp"-->
+                        <!--/>-->
+                <!--</LinearLayout>-->
 
                 <TextView
                     android:id="@+id/item_search_tv1"
@@ -93,15 +93,15 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/item_search_tv3"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-                        android:layout_weight="9"
-                        android:lines="1"
-                        android:textSize="12sp"
-                        />
+                    <!--<TextView-->
+                        <!--android:id="@+id/item_search_tv3"-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginTop="4dp"-->
+                        <!--android:layout_weight="9"-->
+                        <!--android:lines="1"-->
+                        <!--android:textSize="12sp"-->
+                        <!--/>-->
 
                     <ImageView
                         android:id="@+id/item_search_switch"
