--- a/app/src/main/res/layout/fragment_to_back.xml
+++ b/app/src/main/res/layout/fragment_to_back.xml
@@ -9,16 +9,22 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/book_back_rv"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/back_fresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            >
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/book_back_rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
         <ProgressBar
-            android:visibility="gone"
-            android:id="@+id/search_pb"
+            android:id="@+id/back_pb"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center_horizontal|center_vertical"
+            android:visibility="gone"
             />
 
     </android.support.design.widget.CoordinatorLayout>
