--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -43,30 +43,31 @@
                     android:textStyle="bold"
                     />
 
-                <!--<LinearLayout-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginTop="4dp"-->
-                    <!--android:gravity="center_vertical"-->
-                    <!--android:orientation="horizontal"-->
-                    <!--&gt;-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="7dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    >
 
-                    <!--<RatingBar-->
-                        <!--android:id="@+id/item_search_rating"-->
-                        <!--style="@style/MovieRatingBar"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:numStars="5"-->
-                        <!--/>-->
+                    <!--<RatingBar
+                        android:id="@+id/item_search_rating"
+                        style="@style/MovieRatingBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        />
 
-                    <!--<TextView-->
-                        <!--android:id="@+id/item_search_ratnum"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginStart="4dp"-->
-                        <!--android:textSize="12sp"-->
-                        <!--/>-->
-                <!--</LinearLayout>-->
+                    <TextView
+                        android:id="@+id/item_search_ratnum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:textSize="12sp"
+                        />-->
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/item_search_tv1"
@@ -82,7 +83,7 @@
                     android:id="@+id/item_search_tv2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="12dp"
                     android:lines="1"
                     android:ellipsize="end"
                     android:textSize="12sp"
