--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,7 +4,7 @@
         <item
             android:id="@+id/nav_menu_book"
             android:checkable="true"
-            android:icon="@mipmap/movie"
+            android:icon="@mipmap/home"
             android:title="@string/nav_menu_home"/>
         <item
             android:id="@+id/nav_menu_bookBack"
