--- a/app/src/main/res/layout/item_book_to_back.xml
+++ b/app/src/main/res/layout/item_book_to_back.xml
@@ -8,7 +8,7 @@
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp"
     android:id="@+id/item_back_card">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -137,8 +137,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_gravity="center">
+            android:gravity="right"
+            android:layout_gravity="center"
+            android:layout_marginTop="35dp"
+            android:layout_marginRight="20dp">
             <Button
                 android:id="@+id/book_back_btn"
                 android:layout_width="wrap_content"
@@ -147,5 +149,5 @@
                 android:background="@color/color_back_btn"
                 />
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
