--- a/app/src/main/res/layout/content_register.xml
+++ b/app/src/main/res/layout/content_register.xml
@@ -101,28 +101,15 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <!--<android.support.design.widget.TextInputLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="8dp"-->
-                <!--android:layout_marginRight="8dp">-->
-
-                <!--<EditText-->
-                    <!--android:id="@+id/email"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:hint="\@email"-->
-                    <!--android:inputType="textEmailAddress"-->
-                    <!--android:maxLines="1" />-->
-
-            <!--</android.support.design.widget.TextInputLayout>-->
-
             <Button
                 android:id="@+id/register_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="注册"
+                android:textColor="#ffff"
+                android:textSize="26dp"
+                android:background="#0fd4db"
                 android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
