--- a/app/src/main/res/layout/include_book_title.xml
+++ b/app/src/main/res/layout/include_book_title.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,10 +8,9 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp"
         android:layout_weight="5"
-        >
+        android:orientation="vertical"
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/atv_book_title"
@@ -21,110 +19,76 @@
             android:layout_marginTop="6dp"
             android:textColor="@color/movieTitleColor"
             android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/atv_book_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="5dp"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
+
         <TextView
             android:id="@+id/atv_book_pub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="2dp"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
+
         <TextView
             android:id="@+id/atv_book_loc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="2dp"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/atv_book_pages"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="2dp"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
     </LinearLayout>
 
-
-    <Button
-        android:id="@+id/book_borrow_btn"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:layout_gravity="center_vertical"
-        android:layout_margin="5dp"
-        android:orientation="vertical"
-        android:text="@string/book_detail_borrow"
-        android:background="@color/color_borrow_btn"
-        />
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_weight="2"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center_vertical"-->
-        <!--android:layout_margin="5dp"-->
-        <!--android:orientation="vertical"-->
-        <!--app:cardCornerRadius="2dp"-->
-        <!--app:cardElevation="5dp"-->
-        <!--android:clickable="true"-->
-        <!--app:cardBackgroundColor="@color/color_borrow_btn"-->
-        <!--android:saveEnabled="false"-->
-        <!--&gt;-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:padding="8dp">
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:padding="8dp">-->
+            <ImageButton
+                android:id="@+id/want_read_btn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/like"
+                android:gravity="center" />
 
-            <!--<TextView-->
-                <!--android:id="@+id/activity_md_ratingnumber"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:gravity="center"-->
-                <!--android:textColor="@color/movieTitleColor"-->
-                <!--android:textSize="22sp"-->
-                <!--android:text="@string/book_detail_borrow"-->
-                <!--/>-->
+            <TextView
+                android:id="@+id/want_read_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="20sp" />
+        </LinearLayout>
 
-            <!--&lt;!&ndash;<TextView-->
-                <!--android:id="@+id/atv_book_ratingnumber"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:gravity="center"-->
-                <!--android:textColor="@color/movieTitleColor"-->
-                <!--android:textSize="22sp"-->
-                <!--/>-->
+        <Button
+            android:id="@+id/book_borrow_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:layout_weight="5"
+            android:background="@color/color_borrow_btn"
+            android:orientation="vertical"
+            android:text="@string/book_detail_borrow" />
+    </LinearLayout>
 
-            <!--<RatingBar-->
-                <!--android:id="@+id/atv_book_ratingbar"-->
-                <!--style="@style/MovieRatingBar"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center"-->
-                <!--android:isIndicator="true"-->
-                <!--android:numStars="5"/>-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/atv_book_ratings_count"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center"-->
-                <!--android:textSize="10sp"-->
-                <!--/>&ndash;&gt;-->
-
-        <!--</LinearLayout>-->
-
-    <!--</android.support.v7.widget.CardView>-->
 </LinearLayout>
