--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -28,7 +28,7 @@
             android:id="@+id/nav_header_button"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:background="@drawable/login_imagebtn_img"
+            android:background="@mipmap/bookcrossing_icon_round"
             android:layout_gravity="bottom"
             android:layout_marginBottom="70dp"
             android:layout_marginLeft="88dp"
@@ -41,7 +41,7 @@
             android:paddingLeft="8dp"
             android:lines="1"
             android:ellipsize="end"
-            android:textColor="#4b4e50"
+            android:textColor="#dce9ef"
             android:textSize="18sp"
             android:text="@string/string_nav_login"
             android:textStyle="bold"
